objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Contract_allow_for_dependent_pricing_rel__c</fullName>
        <description>Does the contract allow for dependent pricing relationships?</description>
        <label>Contract allow for dependent pricing rel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Yes - Upon request</fullName>
                    <isActive>false</isActive>
                    <label>Yes - Upon request</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_cost__c</fullName>
        <label>Contract cost $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_cover_NonCore_Cat_setup_pricing__c</fullName>
        <label>Contract cover NonCore Cat setup/pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_data_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract data verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_have_req_for_prop_items__c</fullName>
        <label>Contract proprietary item requirement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_on_Office_Depot_or_custom_paper__c</fullName>
        <label>Contract on Office Depot or custom paper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Office Depot</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_state_Restocking_Fees_excluded__c</fullName>
        <label>Contract state Restocking Fees excluded?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                </value>
                <value>
                    <fullName>Standard BSD terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_state_a_Small_Order_Fee_charge__c</fullName>
        <label>Contract state a Small Order Fee charge?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                </value>
                <value>
                    <fullName>Standard BSD terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_state_a_furniture_delivery_fee__c</fullName>
        <label>Contract state a furniture delivery fee?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                </value>
                <value>
                    <fullName>Standard BSD terms</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Spend_Volume_Threshold_for_Pricing__c</fullName>
        <label>Core Spend Volume Threshold for Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_of_annual_volume__c</fullName>
        <label>Core % of annual volume</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Language_included_in_agreement__c</fullName>
        <label>Cost Language included in agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Plus_Floor_Type__c</fullName>
        <label>Cost Plus / Floor Pricing Applied to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>NCC</fullName>
                </value>
                <value>
                    <fullName>Off-Contract</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_basis__c</fullName>
        <label>Cost basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>TDC</fullName>
                </value>
                <value>
                    <fullName>WAPO</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_origin_languge__c</fullName>
        <label>Country of origin language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_of_origin_restrictions__c</fullName>
        <label>Country of origin restrictions?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_origin_restrictions_type__c</fullName>
        <label>Country of origin restrictions type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Specific country (ies)</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_of_origin_language__c</fullName>
        <label>County of origin language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Fee_Subcomponent_Within_Part__c</fullName>
        <inlineHelpText>Credit Card Fee Subcomponent Within Partner Gross Compensation (%)</inlineHelpText>
        <label>Credit Card Fee Subcomponent Within PGC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Legacy_Max_Agreement__c</fullName>
        <label>Current Legacy Max Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_contract_expiration_date_1__c</fullName>
        <label>Current contract expiration date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_contract_expiration_date_2__c</fullName>
        <label>Current contract expiration date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_contract_expiration_date_3__c</fullName>
        <label>Current contract expiration date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cust_Notif_to_change_Pricing_on_GP_Core__c</fullName>
        <label>Cust Notif to change Pricing on GP Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                </value>
                <value>
                    <fullName>Notification Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_Notif_to_change_Pricingon_Standalon__c</fullName>
        <label>Cust Notif to change Pricingon Standalon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                </value>
                <value>
                    <fullName>Notification Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_Notif_to_chg_Pricing_on_Child_Core__c</fullName>
        <label>Cust Notif to chg Pricing on Child Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                </value>
                <value>
                    <fullName>Notification Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_Notif_to_chg_Pricing_on_Par_Core__c</fullName>
        <label>Cust Notif to chg Pricing on Par Core</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                </value>
                <value>
                    <fullName>Notification Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_notif_to_chg_Cust_NonCore_Cat_Prcin__c</fullName>
        <label>Cust notif to chg Cust NonCore Cat Prcin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Non_Core_Catalog_Discount_Basis__c</fullName>
        <label>Custom Non-Core Catalog Discount Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Contract Silent</fullName>
                </value>
                <value>
                    <fullName>List Less</fullName>
                </value>
                <value>
                    <fullName>WAPO Mark-Up</fullName>
                </value>
                <value>
                    <fullName>Web Less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Non_Core_Catalog__c</fullName>
        <label>Custom Non-Core Catalog?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_core_item_count__c</fullName>
        <label>Custom core item count</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_core_written_agreement_language__c</fullName>
        <label>Custom core written agreement language</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_items_must_from_specific_formular__c</fullName>
        <label>Custom items must from specific formular</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_pricing_should_not_be_more_or_les__c</fullName>
        <label>Custom pricing should not be more or les</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Cannot be more</fullName>
                </value>
                <value>
                    <fullName>Cannot be less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Fees_Other_1__c</fullName>
        <label>Customer Fees Other 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Fees_Other_2__c</fullName>
        <label>Customer Fees Other 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Fees_Other_3__c</fullName>
        <label>Customer Fees Other 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy_Cost_Plus_Pricing__c</fullName>
        <label>Customer_Hierarchy_Cost_Plus_Pricing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Great Grandparent</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>Account.Cust_ID__c</formula>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Account.Cust_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>text(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_fees__c</fullName>
        <label>Customer fees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk item</fullName>
                </value>
                <value>
                    <fullName>Imports</fullName>
                </value>
                <value>
                    <fullName>Printed catalog</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Hosted catalog</fullName>
                </value>
                <value>
                    <fullName>Desktop delivery</fullName>
                </value>
                <value>
                    <fullName>Storeroom stocking</fullName>
                </value>
                <value>
                    <fullName>Customer item warehousing</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>VW shipping</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_fees_yes_other_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer fees yes other 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_fees_yes_other_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer fees yes other 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_fees_yes_other_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer fees yes other 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_item_warehousing_fee_language__c</fullName>
        <label>Customer item warehousing fee language</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_breach_notification_period__c</fullName>
        <label>Data breach notification period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Within 24 hours or less of breach confirmation</fullName>
                </value>
                <value>
                    <fullName>Within 72 hours or less of breach confirmation</fullName>
                </value>
                <value>
                    <fullName>More than 72 hours after breach confirmation</fullName>
                </value>
                <value>
                    <fullName>No specific time frame</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_type_received_from_customer__c</fullName>
        <label>Data type received from customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Public data</fullName>
                </value>
                <value>
                    <fullName>Confidential</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Original_Contract_Signed__c</fullName>
        <label>Date Original Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_current_Legal_Contract_expires__c</fullName>
        <label>Date current Legal Contract expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decr_req_to_be_applied_to_NonCore_Cat__c</fullName>
        <label>Decr req to be applied to NonCore Cat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decreases_to_Cust_Non_Core_Non_Catalog__c</fullName>
        <label>Decreases to Cust Non-Core Non-Catalog</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_NonCore_Cat_Structure__c</fullName>
        <label>Describe NonCore Cat Structure</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_number_of_Amendments__c</fullName>
        <label>Describe number of Amendments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desktop_delivery__c</fullName>
        <label>Desktop delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desktop_delivery_fee_language__c</fullName>
        <label>Desktop delivery fee language</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desktopdelivery_language__c</fullName>
        <label>Desktop delivery language</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deviated_Pricing_offered_to_Customer__c</fullName>
        <label>Deviated Pricing offered to Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dimension_fee_for_furn_charge_are_exclud__c</fullName>
        <label>Excess Dimension Fee permitted per Agree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Compulsory</fullName>
                </value>
                <value>
                    <fullName>Yes - Optional</fullName>
                </value>
                <value>
                    <fullName>Standard BSD terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diversity_Partner_Reseller_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diversity Partner / Reseller Name</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diversity_Type_Requirement__c</fullName>
        <label>Diversity Type Requirement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disability Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>LGBTQ Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Minority Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Native Alaskan Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Native American Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Veteran Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Woman Owned/Certified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_employee_purchases_go_toward_rebates__c</fullName>
        <label>Do employee purchases go toward rebates?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_s_missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document(s) missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documentation_confirmation_required_to_p__c</fullName>
        <label>Documentation/confirmation required to p</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_contract_have_provisions_for_an_emp__c</fullName>
        <label>Does contract have provisions for an emp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>